# Production-Grade-Medical-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/config/: __init__.py
app/config/prompts/: answer_generation_v1.yaml  answer_generation_v2.yaml
app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  observability.py  system_health.py  types.py
app/embedding/: service.py
app/eval/: __init__.py  run_eval.py  validate_golden.py
app/generation/: __init__.py  citation_enforcer.py  llm_client.py  prompt_provider.py
app/ingestion/: __init__.py  chunker.py  cleaner.py  loader.py
app/retrieval/: __init__.py  bm25_index.py  hybrid.py  reranker.py  retriever.py  store.py
docs/: architecture.md  sequence_diagram.md
docs/ADR/: ADR-001-why-chroma-not-pinecone.md  ADR-002-reranker-choice.md  ADR-003-citation-threshold-recalibration.md
scripts/: audit_logging.py
tests/: conftest.py  test_api.py  test_cleaner.py  test_config.py  test_ingestion.py  test_logging.py  test_phase2.py  test_phase3.py  test_phase4.py  test_retrieval.py  test_types.py
